# workshop003_Machine_learning_and_Data_streaming

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  README.md  requirements.txt
api/models/: 00_happinesss_score_prediction_model.pkl
api/src/: main.py  methods.md
api/src/core/: model_management.py
dags/: dags_config.py  extract_functions.py  load_functions.py  requirements.txt  training_functions.py
docs/api/: Happiness Prediction API - Methods.postman_collection.json
docs/diagrams/: data-pipeline.excalidraw
kafka/consumer/: consumer.py
kafka/producer/: Dockerfile  producer.py
notebooks/: 00_data_merge.ipynb  01_EDA.ipynb  02_data_upload.ipynb  03_feature_selection.ipynb
sql/: transformed_data_schema.sql  transformed_data_seed_data.sql
sql/queries/: 002_drop_tables.sql
src/connections/: db.py
src/utils/: analysis_functions.py  credentials_management.py  pysqlschema.py
