[tool.poetry]
name = "workshop003-machine-learning-and-data-streaming"
version = "0.1.0"
description = "Prediction of the happiness index using a regression model with Kafka for data transmission and storage of results in a database."
authors = ["David Alejandro Cajiao Lazt <123507601+DCajiao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
ipykernel = "^6.29.5"
psycopg2 = "^2.9.10"
matplotlib = "^3.9.2"
python-dotenv = "^1.0.1"
scipy = "^1.14.1"
numpy = "^2.1.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
